[gd_scene load_steps=2 format=3 uid="uid://b66b0e4drqbrr"]

[ext_resource type="Script" path="res://dotflow/viewports/scripter/scripter.gd" id="1_wrldn"]

[node name="Scripter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wrldn")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tree" type="Tree" parent="HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
hide_root = true

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="HSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="File" type="PopupMenu" parent="HSplitContainer/VBoxContainer/HBoxContainer/MenuBar"]
item_count = 3
item_0/text = "Save"
item_0/id = 0
item_1/text = "Save and Close"
item_1/id = 2
item_2/text = "Discard and Close"
item_2/id = 1

[node name="New" type="PopupMenu" parent="HSplitContainer/VBoxContainer/HBoxContainer/MenuBar"]
item_count = 2
item_0/text = "Environment"
item_0/id = 0
item_1/text = "Plugin"
item_1/id = 1

[node name="TabBar" type="TabBar" parent="HSplitContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
drag_to_rearrange_enabled = true

[node name="Panel" type="Panel" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CodeEdit" type="CodeEdit" parent="HSplitContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
wrap_mode = 1
minimap_draw = true
line_folding = true
gutters_draw_line_numbers = true
code_completion_enabled = true

[connection signal="cell_selected" from="HSplitContainer/Tree" to="." method="_on_tree_cell_selected"]
[connection signal="id_pressed" from="HSplitContainer/VBoxContainer/HBoxContainer/MenuBar/File" to="." method="_on_file_id_pressed"]
[connection signal="id_pressed" from="HSplitContainer/VBoxContainer/HBoxContainer/MenuBar/New" to="." method="_on_new_id_pressed"]
[connection signal="tab_changed" from="HSplitContainer/VBoxContainer/HBoxContainer/TabBar" to="." method="_on_tab_bar_tab_changed"]
[connection signal="text_changed" from="HSplitContainer/VBoxContainer/Panel/CodeEdit" to="." method="_on_code_edit_text_changed"]
